--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 # RSJoystick
 RSJoystick is joystick control for iOS.
 
+![Demo GIF](http://i.imgur.com/3XhIMDR.gif)
+
 ## License
 RSSliderView is licensed under the terms of the MIT license. Please see the [LICENSE](LICENSE) file for full details.
